tests/integration/errors/return_from_block.rb

Proc.new { return 1 }

# RUN: %lightstorm %s > %t.log 2>&1; cat %t.log | %filecheck %s %fcheck_opts

# CHECK:{{.*}}.rb:2: Blocks are not supported
